--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -12,11 +12,12 @@
   width: 100%;
   z-index: 5; /*higher level so header apears above*/
   background-color: antiquewhite;
+  margin: 0;
 }
 
 .right-items {
   position: absolute;
-  right: 0px;
+  right: 1em;
 }
 
 .portfolio-list {
@@ -35,8 +36,59 @@
   width: 100%;
 }
 
-.list-image:hover {
+/* .list-image:hover {
   box-shadow:inset 0 1px 0 rgba(255,255,255,.6), 0 22px 70px 4px rgba(0,0,0,0.56), 0 0 0 1px rgba(0, 0, 0, 0.0);
+} */
+
+.piece-view {
+  display: flex;
+  justify-content: center;
+  margin-top: 4em;
+}
+
+.piece-description {
+  background-color: #61dafb;
+  width: 33%;
+  padding-left: 1em;
+}
+
+.piece-image {
+  width: 67%;
+}
+
+.piece-image img{
+  max-width: 100%;
+  max-height: calc(100% - 4em);
+}
+
+.piece-back-link {
+  color: black;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 800px) {
+  .piece-view {
+    display: block !important;
+    text-align: center;
+  }
+
+  .piece-description {
+    width: 100%;
+    max-height: 400px;
+    display: block !important;
+    padding: 0em;
+  }
+
+  .piece-image {
+    width: 100%;
+    display: block !important;
+    margin-top: 2em;
+  }
+
+  .piece-image img{
+    max-width: 80%;
+    max-height: calc(100% - 8em);
+  }
 }
 
 .App-logo {
