--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -7,6 +7,7 @@
   display: flex;
   position: fixed;
   top: 0;
+  left: 0;
   /**border-bottom: 1px solid;**/
   /**border-color: black;**/
   align-items: center;
@@ -17,18 +18,19 @@
   height: 4em;
   cursor: pointer;
   opacity: .9;
+  padding-left: 48px;
 }
 
 .name-header h1 {
-  padding-left: .5em;
+  padding-left: .35em;
 }
 
 .right-items {
   position: absolute;
   display: flex;
   flex-direction: row-reverse;
-  right: 1em;
-  margin-right: 96px;
+  right: 0;
+  margin-right: 62px;
 }
 
 .right-items p{
@@ -47,8 +49,7 @@
 }
 
 .list-item {
-  min-width: 400px !important;
-  width: calc((100%) / 3 - 96px) !important;
+  width: calc((100% - 96px) / 3) !important;
   margin-bottom: 48px;
   position: relative;
 }
@@ -70,6 +71,7 @@
   justify-content:center;
   margin: 0 !important;
   font-weight: bold;
+  pointer-events: none;
 }
 
 .list-hover p{
@@ -98,19 +100,19 @@
 } */
 
 .piece-view {
+  display: flex;
   justify-content: center;
   margin-top: 4em;
 }
 
 .piece-description {
-  background-color: #61dafb;
   width: 100%;
   padding-left: 1em;
-  height: calc((100vh - 4em) * .3);
+  width: 25%;
 }
 
 .piece-image {
-  height: calc((100vh - 4em) * .7);
+  width: 75%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -118,7 +120,7 @@
 
 .piece-image img{
   max-width: 100%;
-  max-height: calc(100% - 4em);
+  max-height: calc(100vh - 8em);
 }
 
 .piece-back-link {
@@ -144,8 +146,10 @@
     padding-top: 12px;
     height: 6em;
     text-align: center;
+    right: 0em;
     display: block;
-    width: calc(100% - 96px);
+    width: calc(100%);
+    padding-left: 0px;
   }
 
   .name-header h1 {
@@ -169,9 +173,10 @@
 
 
 
-  /* .piece-view {
+  .piece-view {
     display: block !important;
     text-align: center;
+    margin-top: 6em;
   }
 
   .piece-description {
@@ -190,7 +195,7 @@
   .piece-image img{
     max-width: 80%;
     max-height: calc(100% - 8em);
-  } */
+  }
 }
 
 .App-logo {
