--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -99,20 +99,54 @@
   box-shadow:inset 0 1px 0 rgba(255,255,255,.6), 0 22px 70px 4px rgba(0,0,0,0.56), 0 0 0 1px rgba(0, 0, 0, 0.0);
 } */
 
+.web-view {
+  display: block;
+}
+
+.mobile-view {
+  display: none;
+}
+
+.piece-view-main {
+  margin-top: 4em;
+  height: calc(100vh - 4em);
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
 .piece-view {
   display: flex;
   justify-content: center;
-  margin-top: 4em;
+  width: 100%;
 }
 
 .piece-description {
-  width: 100%;
   padding-left: 1em;
-  width: 25%;
+  width: 40%;
+  display: flex;
+  align-items: start;
+  flex-direction: row-reverse;
+  position: relative;
+}
+
+.piece-text {
+  text-align: right;
+  padding-right: 1em;
+}
+
+.piece-text h5 {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.piece-text p {
+  font-size: 14px;
+  line-height: 18px;
 }
 
 .piece-image {
-  width: 75%;
+  width: 60%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -126,6 +160,9 @@
 .piece-back-link {
   color: black;
   cursor: pointer;
+  position: absolute;
+  bottom: 0em;
+  left: 0em;
 }
 
 .specialView {
@@ -134,25 +171,38 @@
 }
 
 .resumeView {
-  width: 100%
+  width: 75%;
+  position: absolute;
+  right: 0em;
 }
 
 .downloadButton {
-  position: absolute;
-  top: 0;
-  right: 0;
+  position: fixed;
+  bottom: .5em;
+  left: 64px;
   padding: 4px;
   font-size: 1rem;
   color: black;
-  border: 1px solid black;
+  text-decoration: underline;
 }
 
 .downloadButton:hover {
   color: black;
-  text-decoration: none;
 }
 
 @media only screen and (max-width: 800px) {
+  .web-view {
+    display: none;
+  }
+
+  .mobile-view {
+    margin-top: 6em !important;
+    width: 100%;
+    height: calc(100vh - 9em);
+    display: block !important;
+    text-align: center;
+  }
+
   .portfolio-list {
     margin: 6em 0em 1em 0em !important;
   }
@@ -208,6 +258,17 @@
     max-height: 400px;
     display: block !important;
     padding: 0em;
+    margin-top: 2em;
+    margin-right: 0em;
+  }
+
+  .piece-text {
+    padding-right: 0px;
+  }
+
+  .piece-text p {
+    font-size: 14px;
+    line-height: 16px;
   }
 
   .piece-image {
@@ -217,13 +278,36 @@
   }
 
   .piece-image img{
-    max-width: 80%;
+    max-width: 100%;
     max-height: calc(100% - 8em);
+  }
+
+  .piece-back-link {
+    position: fixed;
+    bottom: 48px;
+    left: 48px;
   }
 
   .specialView {
     margin: 6em 0px;
     position: relative;
+    width: 100%;
+  }
+
+  .resumeView {
+    width: 100%;
+    position: relative;
+    right: 0px;
+  }
+
+  .downloadButton {
+    position: relative;
+    left: 0;
+    bottom: 0;
+    padding: 4px;
+    font-size: 1rem;
+    color: black;
+    width: 100%;
   }
 }
 
