--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -174,6 +174,7 @@
   width: 75%;
   position: absolute;
   right: 0em;
+  height: auto;
 }
 
 .downloadButton {
@@ -298,6 +299,7 @@
     width: 100%;
     position: relative;
     right: 0px;
+    height: auto;
   }
 
   .downloadButton {
