--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -134,6 +134,11 @@
   padding-right: 1em;
 }
 
+.piece-text a {
+  text-decoration: underline !important;
+  cursor: pointer;
+}
+
 .piece-text h5 {
   font-size: 16px;
   font-weight: bold;
