--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -109,9 +109,17 @@
 .piece-view-main {
   margin-top: 4em;
   height: calc(100vh - 4em);
+  width: 100%;
   display: flex;
   align-items: center;
+  flex-direction: column;
   width: 100%;
+}
+
+.slide-image {
+  max-width: calc(100%);
+  max-height: 100%;
+  margin: 1em 0em;
 }
 
 .piece-view {
@@ -137,6 +145,7 @@
 .piece-text a {
   text-decoration: underline !important;
   cursor: pointer;
+  color: #212529;
 }
 
 .piece-text h5 {
