--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -19,10 +19,18 @@
   cursor: pointer;
   opacity: .9;
   padding-left: 48px;
+  color: rgb(33, 37, 41) !important;
+}
+
+.name-header a {
+  text-decoration: none;
+  color: rgb(33, 37, 41) !important;
+  cursor: pointer;
 }
 
 .name-header h1 {
   padding-left: .35em;
+  color: rgb(33, 37, 41);
 }
 
 .right-items {
@@ -85,6 +93,10 @@
   z-index: 4em;
 }
 
+.portfolio-list a {
+  display: block;
+}
+
 .list-image {
   margin: auto;
   width: 100%;
@@ -126,20 +138,25 @@
   display: flex;
   justify-content: center;
   width: 100%;
+  max-height: 100%;
 }
 
 .piece-description {
   padding-left: 1em;
   width: 40%;
   display: flex;
-  align-items: start;
-  flex-direction: row-reverse;
+  align-items: flex-end;
   position: relative;
+  justify-content: flex-end;
 }
 
 .piece-text {
-  text-align: right;
-  padding-right: 1em;
+  text-align: left;
+  margin-right: 4em;
+  width: 20%;
+  position: fixed;
+  bottom: 2em;
+
 }
 
 .piece-text a {
@@ -160,14 +177,15 @@
 
 .piece-image {
   width: 60%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: block;
+  text-align: center;
+  /* justify-content: center; */
 }
 
 .piece-image img{
   max-width: 100%;
   max-height: calc(100vh - 8em);
+  padding-bottom: 16px;
 }
 
 .piece-back-link {
@@ -278,6 +296,7 @@
 
   .piece-text {
     padding-right: 0px;
+    width: 80%;
   }
 
   .piece-text p {
@@ -287,12 +306,19 @@
 
   .piece-image {
     width: 100%;
-    display: block !important;
+    display: flex !important;
+    flex-wrap: wrap;
+    flex-direction: column;
     margin-top: 2em;
+    overflow-x: auto;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 1em;
+    max-height: calc(100% - 8em);
   }
 
   .piece-image img{
-    max-width: 100%;
+    max-width: 90%;
     max-height: calc(100% - 8em);
   }
 
@@ -300,6 +326,7 @@
     position: fixed;
     bottom: 48px;
     left: 48px;
+    display: none;
   }
 
   .specialView {
